# SquadSyncMadHacks

./: README.md  alerts.py  main.py  pyproject.toml
sim/: __init__.py  alerts.py  constants.py  mesh.py  models.py  scenarios.py  trail.py  visuals.py
